Small fixes to a couple headers

--- a/DataWrangling.ipynb
+++ b/DataWrangling.ipynb
@@ -1021,7 +1021,7 @@
     "collapsed": true
    },
    "source": [
-    "## # Pubmed API\n",
+    "## Pubmed API\n",
     "\n",
     "You can access the Pubmed search API with the following API. Add a term at the end to search for. \n",
     "http://eutils.ncbi.nlm.nih.gov/entrez/eutils/esearch.fcgi?'&term="
@@ -1589,8 +1589,7 @@
     }
    },
    "source": [
-    "<br><br>\n",
-    "<center> <h2> Data Wrangling: How did we get here? </h2></center>\n",
+    "## Data Wrangling: How did we get here?\n",
     "\n",
     "### Data Science is Ad-Hoc\n",
     "- It is part of the job description to put things together that were not designed to go together.\n",
